# prodev-landing

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml
backend/app/: access.py  auth.py  content.py  db.py  leads.py  main.py  migrations.py  models.py  portfolio.py  seed.py  terminal.py
backend/tests/: conftest.py  test_auth.py  test_content.py
bot/: Dockerfile  pyproject.toml
bot/app/: backend.py  banners.py  config.py  keyboards.py  lead.py  main.py  menu.py  pager.py  portfolio.py  screen.py
docs/superpowers/plans/: 2026-07-07-atrice-tg-bot.md  2026-07-07-prodev-landing.md
docs/superpowers/specs/: 2026-07-07-atrice-tg-bot-design.md  2026-07-07-prodev-landing-design.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  content.tsx  main.tsx  styles.css
frontend/src/admin/: Admin.tsx  Leads.tsx  Portfolio.tsx  admin.css
frontend/src/sections/: About.tsx  Cta.tsx  Footer.tsx  Header.tsx  Hero.tsx  Landing.tsx  ScrollSquare.tsx  Services.tsx  Stack.tsx  Terminal.tsx
shared/: seed_content.json  seed_terminal.json
