[project]
name = "atrice-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
